tdf#107776 sw ODF shape import: make is-textbox check more strict

Regression from commit 9835a5823e0f559aabbc0e15ea126c82229c4bc7 (sw
textboxes: reimplement ODF import/export, 2014-10-04), the problem was
that we assumed graphic autostyles look like:

    <style:style style:name="gr2" style:family="graphic">

for simple (non-text-box) content, and look like:

    <style:style style:name="gr1" style:family="graphic" style:parent-style-name="Frame">

for complex (text-box) content.

Turns out it's valid to have other parent styles as well, e.g. Graphics,
which should not be imported as sw textboxes.

With this, the arrow at the bottom of page 3 of the bugdoc is now again
on top of the image, i.e. layout compatibility is restored.

Change-Id: Icbba8a23c5f66e63090f90e6581ebc98948cb80b